# lcpp-lib-python

./: .gitignore  LICENSE.md  README.md  hatch_build.py  pyproject.toml
.github/workflows/: release.yml
buildscripts/: build_linux_x64.sh  download.py  download_linux_vulkan.py  extract.py  extract_and_build_linux_x64.sh  extract_and_build_macos_arm64.sh  extract_and_build_windows_x64.sh  extract_linux_vulkan.py  full_update_linux_x64.sh  get_download_tag.py  get_repo_latest_version.py  update_project_version.py
buildscripts/ci/: get_version_status.py
src/lcpp_lib/: __init__.py  __version__.py
