[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lcpp-lib"
dynamic = ["version"]
description = "llama.cpp libraries repackaged as a python wheel"
readme = "README.md"
authors = [{ name = "Mykola Dzhus" }]
requires-python = ">=3.8"
license = { file = "LICENSE.md" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[tool.hatch.build.targets.wheel]
artifacts = [
    "src/lcpp_lib/native_libs/*.so*",
    "src/lcpp_lib/native_libs/*.dylib*",
    "src/lcpp_lib/native_libs/*.dll*",
    "src/lcpp_lib/native_libs/LICENSE*",
]
packages = ["src/lcpp_lib"]
reproducible = false

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.version]
path = "src/lcpp_lib/__version__.py"

[dependency-groups]
dev = ["auditwheel>=6.1.0"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
